tests/negative/return_type_mismatch.glyph
module neg

fn f() -> number {
  return "hi"
}
